--- a/test.html
+++ b/test.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="/static/js/jquery.min.js"></script>
+
+
 </head>
 <body>
-    <input type="email">
+   <button id="labBtn">啊啊啊</button>
+    <script>
+        $(function(){
+            $("#labBtn").click(function(){window.open('/share/')});
+        })
+    </script>
 </body>
 </html>
